// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`отрендерит себя с категорией "Разбор" 1`] = `
<div
  className="JournalSnippet__wrapper"
>
  <div
    className="JournalSnippet"
    style={
      Object {
        "backgroundImage": "url(picture-of-cat)",
      }
    }
  >
    <div
      className="JournalSnippet__text"
    >
      <div
        className="JournalSnippet__subtitle"
      >
        Разбор Авто.ру
      </div>
      <div
        className="JournalSnippet__title"
      >
        Уникальная Camry из Владикавказа, фото нового Крузака и другие события дня
      </div>
    </div>
    <Link
      className="JournalSnippet__link"
      metrikaParams="journal_blocks,reviews_explain,dailydgst220421,clicks"
      onClick={[Function]}
      target="_blank"
      url="linkMag/mag-article/?article_id=dailydgst220421&utm_content=dailydgst220421&utm_campaign=reviews_explain&from=reviews"
    />
  </div>
</div>
`;

exports[`отрендерит себя с категорией "Тест-драйв" 1`] = `
<div
  className="JournalSnippet__wrapper"
>
  <div
    className="JournalSnippet"
    style={
      Object {
        "backgroundImage": "url(picture-of-cat)",
      }
    }
  >
    <div
      className="JournalSnippet__text"
    >
      <div
        className="JournalSnippet__subtitle"
      >
        Тест-драйв Авто.ру
      </div>
      <div
        className="JournalSnippet__title"
      >
        Уникальная Camry из Владикавказа, фото нового Крузака и другие события дня
      </div>
    </div>
    <Link
      className="JournalSnippet__link"
      metrikaParams="journal_blocks,reviews_test-drive,dailydgst220421,clicks"
      onClick={[Function]}
      target="_blank"
      url="linkMag/mag-article/?article_id=dailydgst220421&utm_content=dailydgst220421&utm_campaign=reviews_test-drive&from=reviews"
    />
  </div>
</div>
`;
